--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "onigasm": "^1.3.0"
   },
   "devDependencies": {
+    "@types/node": "^10.0.4",
     "tslint": "^3.15.1",
     "typescript": "^2.0.8"
   }
