--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "ES6",
+		"target": "esnext",
 		"module": "commonjs",
 		"outDir": "dist",
 		"declarationDir": "dist/typings",
